--- a/hiddenform.html
+++ b/hiddenform.html
@@ -16,6 +16,10 @@
         <button type="submit">Submit</button>
     </form>
 
+    <div class="text-container">
+        <span id="animated-text"></span>
+    </div>
+
     <script>
         // Set today's date as the minimum date
         const today = new Date();
@@ -25,6 +29,27 @@
 
         const formattedDate = `${yyyy}-${mm}-${dd}`;
         document.getElementById('date').setAttribute('min', formattedDate);
+
+
+        // script.js
+        const textElement = document.getElementById("animated-text");
+
+        // Array of text strings to animate
+        const textArray = ["Welcome to Animated Text!", "Powered by HTML, CSS, and JS.", "Enjoy creating beautiful animations!"];
+        let textIndex = 0;
+
+        // Function to change the text
+        function changeText() {
+            textElement.textContent = textArray[textIndex]; // Update text
+            textIndex = (textIndex + 1) % textArray.length; // Loop through textArray
+        }
+
+        // Initial call
+        changeText();
+
+        // Change text every 5 seconds (after typing completes)
+        setInterval(changeText, 5000);
+
     </script>
 </body>
 </html>
